updated deployment scripts